--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ My second Discord &lt;3<br>
 
   <br><br>
  Nawaf & NAIF & DeathRow &lt;3<br>
-  <a href="https://discord.gg/" target="_blank">Discord.gg/mn1</a>
+  <a href="https://discord.gg/" target="_blank">Discord.gg/</a>
 </div>
 
 
