--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Death Skull</title>
   <style>
     body {
@@ -16,8 +14,6 @@
       align-items: center;
       min-height: 100vh;
     }
-    body {
-
     .top-bar {
       width: 100%;
       background-color: #111;
@@ -28,7 +24,6 @@
       letter-spacing: 1px;
       border-bottom: 1px solid #222;
     }
-
     .header {
       font-family: 'Creepster', cursive;
       font-size: 3.5em;
@@ -36,24 +31,20 @@
       color: #ff0000;
       text-shadow: 0 0 10px #ff0000;
     }
-
     .slideshow-container {
       max-width: 800px;
       margin-bottom: 20px;
       position: relative;
     }
-
     .mySlides {
       display: none;
     }
-
     .slideshow-container img {
       width: 100%;
       border: 2px solid #333;
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
     }
-
     .music-button {
       background: #111;
       color: #ff0000;
@@ -62,28 +53,37 @@
       font-size: 1em;
       border-radius: 50px;
       cursor: pointer;
-      margin-bottom: 25px;
+      margin-bottom: 10px;
       transition: all 0.3s ease;
-      display: flex;
-      align-items: center;
-      gap: 10px;
     }
-
     .music-button:hover {
       background: #ff0000;
       color: #000;
     }
-
-    .music-button svg {
-      width: 20px;
-      height: 20px;
-      fill: currentColor;
-    }
-
     audio {
       display: none;
     }
-
+    .volume-container {
+      margin-top: 5px;
+      width: 200px;
+    }
+    .volume-bar-container {
+      width: 100%;
+      height: 10px;
+      background: #333;
+      border-radius: 5px;
+      overflow: hidden;
+      cursor: pointer;
+      position: relative;
+    }
+    .volume-bar {
+      height: 100%;
+      background: #ff0000;
+      transition: width 0.1s;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
     .footer {
       font-size: 1.1em;
       color: #888;
@@ -91,45 +91,29 @@
       margin-top: auto;
       margin-bottom: 15px;
     }
-
     .footer a {
       color: #ff0000;
       text-decoration: none;
     }
-
     .footer a:hover {
       text-decoration: underline;
     }
-
   </style>
-
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&amp;display=swap" rel="stylesheet">
 </head>
 <body>
-
-<!-- شريط علوي -->
-<div class="top-bar">
-  Nawaf & NAIF & DeathRow &lt;3
-</div>
-
-<!-- عنوان الموقع -->
+<div class="top-bar">Nawaf &amp; NAIF &amp; DeathRow &lt;3</div>
 <div class="header">Death Skull</div>
-
-<!-- زر الموسيقى -->
-<button class="music-button" onclick="toggleMusic()">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-    <path d="M9 19V6h13V4H7v15a2 2 0 1 0 2 0z"/>
-  </svg>
-  تشغيل / إيقاف 
-</button>
-
-<!-- مشغل الموسيقى -->
-<audio id="bg-music" autoplay loop>
+<button class="music-button" onclick="toggleMusic()">تشغيل / إيقاف</button>
+<div class="volume-container">
+  <div id="volume-level" style="color: #ff0000; font-size: 1.1em; margin-bottom: 5px;">مستوى الصوت: 56%</div>
+  <div id="volume-bar-container" class="volume-bar-container" onclick="setVolumeFromClick(event)">
+    <div id="volume-bar" class="volume-bar" style="width: 56%;"></div>
+  </div>
+</div>
+<audio id="bg-music" autoplay="" loop="">
   <source src="death_theme.mp3" type="audio/mpeg">
-  متصفحك لا يدعم تشغيل الصوت.
 </audio>
-
-<!-- السلايد شو -->
 <div class="slideshow-container">
   <div class="mySlides fade"><img src="1.gif" alt="GIF 1"></div>
   <div class="mySlides fade"><img src="2.gif" alt="GIF 2"></div>
@@ -153,45 +137,15 @@
   <div class="mySlides fade"><img src="20.gif" alt="GIF 20"></div>
   <div class="mySlides fade"><img src="21.gif" alt="GIF 21"></div>
 </div>
-
-<!-- الفوتر -->
-
-
-  <!-- الفوتر -->
 <div class="footer">
   <strong>My account</strong><br>
-
-  <!-- Kick -->
-  <a href="https://kick.com/ZLF_1" target="_blank" style="margin-right: 10px;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48" style="vertical-align: middle;">
-      <path fill="#00ff00" d="M4 12v24h8v-8l8 8h8L16 24l12-12h-8l-8 8v-8H4z"/>
-    </svg>
-    Kick
-  </a>
-
-  <!-- TikTok -->
-  <a href="https://tiktok.com/@زلف" target="_blank" style="margin-left: 10px;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="vertical-align: middle;">
-      <path fill="#ff0050" d="M12.001 2c1.104 0 2 .896 2 2v6.586l2.707-2.707 1.414 1.414L15.414 13l2.708 2.707-1.414 1.414L14 14.414V21a2 2 0 1 1-4 0v-5.586l-2.707 2.707-1.414-1.414L8.586 13 5.88 10.293l1.414-1.414L10 11.586V4a2 2 0 0 1 2-2z"/>
-    </svg>
-    TikTok
-  </a>
-
-    <br><br>
-My second Discord &lt;3<br>
-  <a href="https://discord.gg/BWzWJpDy6t" target="_blank">Discord.gg/BWzWJpDy6t</a>
-
-  <br><br>
- Nawaf & NAIF & DeathRow &lt;3<br>
-  <a href="https://discord.gg/" target="_blank">Discord.gg/</a>
+  <a href="#">Discord.gg/BWzWJpDy6t</a><br><br>
+  Nawaf &amp; NAIF &amp; DeathRow &lt;3<br>
+  <a href="#">Discord.gg/</a>
 </div>
-
-
 <script>
-  // السلايد شو
   let slideIndex = 0;
   showSlides();
-
   function showSlides() {
     let slides = document.getElementsByClassName("mySlides");
     for (let i = 0; i < slides.length; i++) {
@@ -202,10 +156,7 @@ My second Discord &lt;3<br>
     slides[slideIndex - 1].style.display = "block";
     setTimeout(showSlides, 2000);
   }
-
-  // تشغيل/إيقاف الموسيقى
   const music = document.getElementById("bg-music");
-
   function toggleMusic() {
     if (music.paused) {
       music.play();
@@ -213,15 +164,38 @@ My second Discord &lt;3<br>
       music.pause();
     }
   }
-
-  // تشغيل تلقائي عند تحميل الصفحة (مع fallback للتفاعل)
+  function updateVolumeDisplay() {
+    const volumeDisplay = document.getElementById("volume-level");
+    const volumeBar = document.getElementById("volume-bar");
+    const percent = Math.round(music.volume * 100);
+    volumeDisplay.textContent = "مستوى الصوت: " + percent + "%";
+    volumeBar.style.width = percent + "%";
+    localStorage.setItem("volume", music.volume);
+  }
+  function setVolumeFromClick(event) {
+    const container = document.getElementById("volume-bar-container");
+    const rect = container.getBoundingClientRect();
+    const clickX = event.clientX - rect.left;
+    const width = rect.width;
+    const newVolume = Math.min(1, Math.max(0, clickX / width));
+    music.volume = newVolume;
+    updateVolumeDisplay();
+  }
+  let isDragging = false;
+  document.getElementById("volume-bar-container").addEventListener("mousedown", () => isDragging = true);
+  window.addEventListener("mouseup", () => isDragging = false);
+  window.addEventListener("mousemove", (e) => { if (isDragging) setVolumeFromClick(e); });
   window.addEventListener("load", () => {
+    const savedVolume = localStorage.getItem("volume");
+    if (savedVolume !== null) {
+      music.volume = parseFloat(savedVolume);
+    }
+    updateVolumeDisplay();
     music.play().catch(() => {
       document.addEventListener("click", () => music.play(), { once: true });
     });
   });
-  
 </script>
 
-</body>
-</html>
+
+</body></html>
