--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 </div>
 <div class="footer">
   <strong>My account</strong><br>
-  <a href="#">Discord.gg/BWzWJpDy6t</a><br><br>
+  <a href="https://discord.gg/BWzWJpDy6t" target="_blank">Discord.gg/BWzWJpDy6t</a><br><br>
   Nawaf &amp; NAIF &amp; DeathRow &lt;3<br>
-  <a href="#">Discord.gg/</a>
+  <a href="https://discord.gg/" target="_blank">Discord.gg/</a>
 </div>
 <script>
   let slideIndex = 0;
