--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Death Skull</title>
+  <title>Toxic Death</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -103,8 +103,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Creepster&amp;display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="top-bar">Nawaf &amp; NAIF &amp; DeathRow &lt;3</div>
-<div class="header">Death Skull</div>
+<div class="top-bar">Toxic Death &amp; NAIF &amp; DeathRow &lt;3</div>
+<div class="header">Toxic Death</div>
 <button class="music-button" onclick="toggleMusic()">تشغيل / إيقاف</button>
 <div class="volume-container">
   <div id="volume-level" style="color: #ff0000; font-size: 1.1em; margin-bottom: 5px;">مستوى الصوت: 56%</div>
@@ -141,7 +141,7 @@
 <div class="footer">
   <strong>My account</strong><br>
   <a href="https://discord.gg/BWzWJpDy6t" target="_blank">Discord.gg/BWzWJpDy6t</a><br><br>
-  Nawaf &amp; NAIF &amp; DeathRow &lt;3<br>
+  Toxic Death &amp; NAIF &amp; DeathRow &lt;3<br>
   <a href="https://discord.gg/" target="_blank">Discord.gg/</a>
 </div>
 
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
